# fixed_model_frame

./: .gitignore
_archive_legacy/: ARCHIVE_REPORT.md  ARCHIVE_REPORT_20250202.md  _ARCHIVE_CANDIDATES.md
_archive_legacy/src/PlaneDetect/launch/: interface_test.launch  node2_quadric.launch
_archive_legacy/src/gpu_demo/src/: demo_test.cpp.disabled  test_main.cpp
src/PlaneDetect/: CMakeLists.txt  SUPERVOXEL_INTEGRATION.md  package.xml
src/PlaneDetect/config/: plane_detection.rviz  plane_detection.yaml
src/PlaneDetect/include/PlaneDetect/: PlaneDetect.cuh  PlaneDetect.h
src/PlaneDetect/launch/: dual_node_system.launch  node1_plane.launch  plane_detection.launch  plane_detection_only.launch
src/PlaneDetect/src/: PlaneDetect.cpp  PlaneDetect.cu  interface_test.cpp  plane_test.cpp
src/gpu_demo/: .gitignore  CMakeLists.txt  package.xml
src/gpu_demo/config/: integrated_gpu_test.yaml  preprocess_params.yaml  quadric_detection.rviz  quadric_detector_params.yaml
src/gpu_demo/include/gpu_demo/: GPUPreprocessor.h  GPUPreprocessor_kernels.cuh  QuadricDetect.h  QuadricDetect_kernels.cuh
src/gpu_demo/launch/: demo_test.launch  generate_pointcloud.launch  integrated_gpu_test.launch  normal_test.launch  test_preprocess.launch
src/gpu_demo/script/: generate_pointcloud.py  transform.py
src/gpu_demo/src/: GPUPreprocessor.cpp  GPUPreprocessor_kernels.cu  QuadricDetect.cpp  QuadricDetect.cu  SuperVoxel.cpp  gpu_check.cpp  normal_test.cpp  test_preprocess.cpp
src/point_cloud_generator/: CMakeLists.txt  LICENSE  README.md  package.xml
src/point_cloud_generator/config/: detector_gpu.yaml  detector_params.yaml
src/point_cloud_generator/include/point_cloud_generator/: MinimalSampleQuadric.h  MinimalSampleQuadric_GPU.h  Point_cloud_preprocessor.h
src/point_cloud_generator/launch/: final_test.launch  generator.launch  gpu_test.launch  preprocess.launch
src/point_cloud_generator/src/: MinimalSampleQuadric.cpp  MinimalSampleQuadric_GPU.cu  Point_cloud_preprocessor.cpp  final_test.cpp  gpu_test_node.cpp  pc_generator_finished.cpp
src/super_voxel/: CMakeLists.txt  package.xml
src/super_voxel/config/: plane_detection_params.yaml  plane_detection_visualization.rviz  supervoxel.rviz  supervoxel.yaml
src/super_voxel/include/super_voxel/: supervoxel.h
src/super_voxel/launch/: plane_detection_test.launch  supervoxel.launch
src/super_voxel/scripts/: debug_supervoxel.sh  start_supervoxel.sh  test_library.sh
src/super_voxel/src/: supervoxel copy.cpp  supervoxel.cpp  supervoxel_processor.cpp
